Refactor in preparation for CSSBox to replace FlyingSaucer