@@ -38,6 +38,7 @@ def moduleSecurity = [
     "--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
     "--add-exports=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED",
     "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+    "--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED",
     "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
 ]
 
@@ -90,6 +91,8 @@ dependencies {
   implementation 'org.jsoup:jsoup:1.14.3'
   // TODO: Wait for https://github.com/flyingsaucerproject/flyingsaucer/pull/170
   //implementation 'org.xhtmlrenderer:flying-saucer-core:9.1.22'
+
+  implementation 'net.sf.cssbox:cssbox:5.0.0'
 
   // R
   implementation 'org.renjin:renjin-script-engine:3.5-beta76'
